Criando páginas do menu admin e cadastro de tickets

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -99,3 +99,8 @@ body::-webkit-scrollbar-thumb {
 .custom-height {
     height: 100vh;
 }
+
+.card-ticket-messages {
+    height: 200px;
+    overflow-y: auto;
+}
